# CPP_rtype_2019

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TCP_PROTOCOL.md  UDP_RFC_R-TYPE.docx  conanfile.py  conanfile.txt  update_data.md
client/src/: main.cpp
client/src/core/: core.hpp
client/src/core/CoreObject/: CoreObject.hpp
client/src/core/Event/: Event.cpp  Event.hpp
client/src/core/EventableObject/: EventableObject.hpp
client/src/core/EventableSceneObject/: EventableSceneObject.cpp  EventableSceneObject.hpp
client/src/core/Exception/: Exception.cpp  Exception.hpp
client/src/core/Gui/: Tools.cpp  Tools.hpp
client/src/core/ITcpReceiver/: ITcpReceiver.hpp
client/src/core/LoadScreen/: LoadScreen.cpp  LoadScreen.hpp
client/src/core/Loading/: Loading.cpp  Loading.hpp
client/src/core/Logger/: Logger.cpp  Logger.h
client/src/core/MenuManager/: IMenuManager.hpp  MenuManager.cpp  MenuManager.hpp
client/src/core/Menus/IMenu/: IMenu.hpp
client/src/core/Menus/JoinLobby/: JoinLobby.cpp  JoinLobby.hpp
client/src/core/Menus/Lobby/: Lobby.cpp  Lobby.hpp
client/src/core/Menus/MainMenu/: MainMenu.cpp  MainMenu.hpp
client/src/core/Player/: Player.cpp  Player.hpp
client/src/core/Power/: Power.cpp  Power.hpp  PowerEnum.hpp
client/src/core/PowerManager/: PowerManager.cpp  PowerManager.hpp
client/src/core/PowerUp/: PowerUp.cpp  PowerUp.hpp
client/src/core/Scene/: IScene.hpp  Scene.cpp  Scene.hpp
client/src/core/SceneManager/: ISceneManager.hpp  SceneManager.cpp  SceneManager.hpp
client/src/core/SceneObject/: SceneObject.hpp
client/src/core/Settings/: Settings.cpp  Settings.hpp
client/src/core/SoundManager/: SoundManager.cpp  SoundManager.hpp
client/src/core/Sounds/MenuMusic/: MenuMusic.cpp  MenuMusic.h  MenuMusic.hpp
client/src/core/Sounds/MenuSelectSound/: MenuSelectSound.cpp  MenuSelectSound.h  MenuSelectSound.hpp
client/src/core/Sounds/QuitSound/: QuitSound.cpp  QuitSound.h  QuitSound.hpp
client/src/core/SplashScreen/: SplashScreen.cpp  SplashScreen.hpp
client/src/core/TcpNetwork/: ITcpNetwork.hpp  TcpNetwork.cpp  TcpNetwork.hpp
client/src/core/Timer/: Timer.cpp  Timer.hpp
client/src/core/UdpNetwork/: IUdpNetwork.hpp  UdpNetwork.cpp  UdpNetwork.hpp
client/src/core/UdpNetwork/UdpResponse/: IUdpResponse.hpp
client/src/core/WindowManager/: IWindowManager.hpp  WindowManager.cpp  WindowManager.hpp
client/src/core/WindowState/: WindowState.cpp  WindowState.hpp
client/src/game/AnimateSprite/: AnimateSprite.cpp  AnimateSprite.hpp  ISprite.hpp
client/src/game/Bullets/BulletTouch/SimpleExplosion/: SimpleExplosion.cpp  SimpleExplosion.h
client/src/game/Bullets/BulletTouch/SimpleKill/: SimpleKill.cpp  SimpleKill.h
client/src/game/Bullets/BulletTouch/SimpleTouch/: SimpleTouch.cpp  SimpleTouch.h
client/src/game/Bullets/BulletTouch/SuperTouch/: SuperTouch.cpp  SuperTouch.h
client/src/game/Bullets/BulletsShoot/MasterBullet/: MasterBullet.cpp  MasterBullet.h
client/src/game/Bullets/BulletsShoot/SimpleBomb/: SimpleBomb.cpp  SimpleBomb.h
client/src/game/Bullets/BulletsShoot/SimpleBullet/: SimpleBullet.cpp  SimpleBullet.h
client/src/game/Bullets/BulletsShoot/SuperBullet1/: SuperBullet1.cpp  SuperBullet1.h
client/src/game/Bullets/BulletsShoot/SuperBullet2/: SuperBullet2.cpp  SuperBullet2.h
client/src/game/Bullets/BulletsShoot/SuperBullet3/: SuperBullet3.cpp  SuperBullet3.h
client/src/game/Menus/JoinLobby/: JoinLobby.cpp  JoinLobby.hpp
client/src/game/Menus/Lobby/: Lobby.cpp  Lobby.hpp
client/src/game/Menus/MainMenu/: MainMenu.cpp  MainMenu.hpp
client/src/game/Menus/SettingsMenu/: SettingsMenu.cpp  SettingsMenu.hpp
client/src/game/PowerUp/DefaultPowerUp/: DefaultPowerUp.cpp  DefaultPowerUp.hpp
client/src/game/PowerUpSprite/Boost/: Boost.cpp  Boost.h
client/src/game/PowerUpSprite/Heal/: Heal.cpp  Heal.h
client/src/game/UdpResponse/BulletResponse/: BulletResponse.cpp  BulletResponse.hpp
client/src/game/UdpResponse/MonsterResponse/: MonsterResponse.cpp  MonsterResponse.hpp
client/src/game/UdpResponse/PlayerResponse/: PlayerResponse.cpp  PlayerResponse.hpp
client/src/game/UdpResponse/PowerupResponse/: PowerupResponse.cpp  PowerupResponse.hpp
client/src/game/enemies/GreenBoss/: GreenBoss.cpp  GreenBoss.h
client/src/game/enemies/LittleBrown/: LittleBrown.cpp  LittleBrown.h
client/src/game/enemies/LittleRed/: LittleRed.cpp  LittleRed.h
client/src/game/enemies/OrangeBoss/: OrangeBoss.cpp  OrangeBoss.h
server/src/: GameManager.cpp  GameManager.h  Server.cpp  Server.h  ServerManager.cpp  ServerManager.h  Server_TCP.cpp  Server_TCP.hpp  connection_handler_TCP.cpp  connection_handler_TCP.hpp  connection_manager.cpp  main.cpp
server/src/Bullet/: Bullet.cpp  Bullet.hpp
server/src/Game/: Game.cpp  Game.hpp
server/src/Map/: Map.cpp  Map.hpp
server/src/Monster/: Monster.cpp  Monster.hpp
server/src/Player/: Player.cpp  Player.hpp
server/src/TCP_Server/: Server_TCP.cpp  Server_TCP.hpp  connection_handler_TCP.cpp  connection_handler_TCP.hpp
server/src/UDP_Server/: Server_UDP.cpp  Server_UDP.hpp  Server_UDP_Manager.cpp  Server_UDP_Manager.hpp  udp_session.cpp
server/src/Utils/: Utils.cpp  Utils.hpp
